refactor: 객체로 분리할수 있는것들 분리