@@ -13,7 +13,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 class Http11ProcessorTest {
 
     @Test
-    void process() {
+    void process() throws IOException {
         // given
         final var socket = new StubSocket();
         final var processor = new Http11Processor(socket);
@@ -22,12 +22,20 @@ class Http11ProcessorTest {
         processor.process(socket);
 
         // then
+        final URL resource = getClass().getClassLoader().getResource("static/index.html");
+        if (resource == null) {
+            throw new RuntimeException("Could not find static/index.html resource");
+        }
+        final String fileContent;
+        try (var inputStream = resource.openStream()) {
+            fileContent = new String(inputStream.readAllBytes());
+        }
         var expected = String.join("\r\n",
-                "HTTP/1.1 200 OK ",
-                "Content-Type: text/html;charset=utf-8 ",
-                "Content-Length: 12 ",
+                "HTTP/1.1 200 OK",
+                "Content-Type: text/html;charset=utf-8",
+                "Content-Length: " + fileContent.length(),
                 "",
-                "Hello world!");
+                fileContent);
 
         assertThat(socket.output()).isEqualTo(expected);
     }
@@ -35,10 +43,10 @@ class Http11ProcessorTest {
     @Test
     void index() throws IOException {
         // given
-        final String httpRequest= String.join("\r\n",
-                "GET /index.html HTTP/1.1 ",
-                "Host: localhost:8080 ",
-                "Connection: keep-alive ",
+        final String httpRequest = String.join("\r\n",
+                "GET /index.html HTTP/1.1",
+                "Host: localhost:8080",
+                "Connection: keep-alive",
                 "",
                 "");
 
@@ -50,11 +58,18 @@ class Http11ProcessorTest {
 
         // then
         final URL resource = getClass().getClassLoader().getResource("static/index.html");
-        var expected = "HTTP/1.1 200 OK \r\n" +
-                "Content-Type: text/html;charset=utf-8 \r\n" +
-                "Content-Length: 5564 \r\n" +
-                "\r\n"+
-                new String(Files.readAllBytes(new File(resource.getFile()).toPath()));
+        if (resource == null) {
+            throw new RuntimeException("Could not find static/index.html resource");
+        }
+        final String fileContent;
+        try (var inputStream = resource.openStream()) {
+            fileContent = new String(inputStream.readAllBytes());
+        }
+        var expected = "HTTP/1.1 200 OK\r\n" +
+                "Content-Type: text/html;charset=utf-8\r\n" +
+                "Content-Length: " + fileContent.length() + "\r\n" +
+                "\r\n" +
+                fileContent;
 
         assertThat(socket.output()).isEqualTo(expected);
     }
